--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,115 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+header {
+  text-align: center;
+  background-color: #114090;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  border-bottom: 2px solid black;
+}
+header h1 {
+  font-family: Calibri light;
+}
+header p {
+  font-family: Menlo;
+}
+.userInput {
+    display: none;
+    background-color: #FFF8D8;
+    color:black;
+    font-family: Menlo;
+    padding: 15px;
+    width: 300px;
+    position: fixed;
+    z-index: 1;
+    top: 150px;
+    right: 0;
+    overflow-x: hidden;
+    border-radius: 5% 0 0 5%;
+    border: 2px solid black;
+}
+/*
+*
+* Table Styles
+*
+*/
+
+.table {
+  display: inline-block;
+  background-color: #D8D0C5;
+  width: 100vw;
+  padding: 50px;
+  min-height: 75vh;
+}
+.table-fill {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  height: 320px;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  animation: float 5s infinite;
+}
+th {
+  color:#D5DDE5;;
+  background:#1b1e24;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
+}
+th:first-child {
+  border-top-left-radius:3px;
+}
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
+}
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+tr:first-child {
+  border-top:none;
+}
+tr:last-child {
+  border-bottom:none;
+}
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+th.text-left {
+  text-align: left;
+}
+td.text-left {
+  text-align: left;
+}
+
