--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,29 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+header h2 {
+  font-family: Menlo;
+  font-size: 1.25em;
+}
+header {
+  display: none;
+  opacity: .9;
+  position:fixed;
+  top: 0;
+  width: 100%;
+  height: 8vh;
+  text-align: center;
+  padding: 10px;
+  background-color: #2B3A42;
+  color: white;
+  font-family: Calibri light;
+  border-bottom: 2px solid #3F5866;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-header {
+.landing-page {
   text-align: center;
   background-color: #114090;
   min-height: 100vh;
@@ -25,34 +41,43 @@ header {
   color: white;
   border-bottom: 2px solid black;
 }
-header h1 {
+.landing-page h1 {
   font-family: Calibri light;
 }
-header p {
+.landing-page p {
   font-family: Menlo;
 }
 .userInput {
     display: none;
+    opacity: .9;
     background-color: #FFF8D8;
     color:black;
     font-family: Menlo;
     padding: 15px;
-    width: 300px;
+    width: 200px;
     position: fixed;
     z-index: 1;
-    top: 150px;
+    top: 8vh;
     right: 0;
     overflow-x: hidden;
-    border-radius: 5% 0 0 5%;
     border: 2px solid black;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.9);
 }
 /*
 *
-* Calculator Table Styles
+* Table Styles
 *
 */
 
-.table {
+.calulator-table {
+  display: inline-block;
+  background-color: #D8D0C5;
+  border-bottom: 2px solid black;
+  width: 100vw;
+  padding: 50px;
+  min-height: 75vh;
+}
+.macros-table{
   display: inline-block;
   background-color: #D8D0C5;
   border-bottom: 2px solid black;
@@ -123,11 +148,15 @@ td {
 * Macros Calulator
 *
 */
-
+.macros {
+  background-color: #7B9BA6;
+  min-height: 75vh;
+}
 #pricing-table {
-	margin: 100px auto;
+  margin: auto;
+  padding: 50px;
 	text-align: center;
-	width: 892px; /* total computed width = 222 x 3 + 226 */
+	width: 800px;
 }
 
 #pricing-table .plan {
@@ -194,18 +223,6 @@ td {
 	border-radius: 0 5px 0 0;
 }
 
-#pricing-table h3 span {
-	display: block;
-	font: bold 25px/100px Georgia, Serif;
-	color: #777;
-	background: #fff;
-	border: 5px solid #fff;
-	height: 100px;
-	width: 100px;
-	margin: 10px auto -65px;
-	box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
-}
-
 /* --------------- */
 
 #pricing-table ul {
@@ -217,66 +234,6 @@ td {
 #pricing-table li {
 	border-top: 1px solid #ddd;
 	padding: 10px 0;
-}
-
-/* --------------- */
-
-#pricing-table .signup {
-	position: relative;
-	padding: 8px 20px;
-	margin: 20px 0 0 0;
-	color: #fff;
-	font: bold 14px Arial, Helvetica;
-	text-transform: uppercase;
-	text-decoration: none;
-	display: inline-block;
-	background-color: #72ce3f;
-	background-image: -moz-linear-gradient(#72ce3f, #62bc30);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#72ce3f), to(#62bc30));
-	background-image: -webkit-linear-gradient(#72ce3f, #62bc30);
-	background-image: -o-linear-gradient(#72ce3f, #62bc30);
-	background-image: -ms-linear-gradient(#72ce3f, #62bc30);
-	background-image: linear-gradient(#72ce3f, #62bc30);
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	text-shadow: 0 1px 0 rgba(0,0,0,.3);
-	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
-}
-
-#pricing-table .signup:hover {
-	background-color: #62bc30;
-	background-image: -moz-linear-gradient(#62bc30, #72ce3f);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#62bc30), to(#72ce3f));
-	background-image: -webkit-linear-gradient(#62bc30, #72ce3f);
-	background-image: -o-linear-gradient(#62bc30, #72ce3f);
-	background-image: -ms-linear-gradient(#62bc30, #72ce3f);
-	background-image: linear-gradient(#62bc30, #72ce3f);
-}
-
-#pricing-table .signup:active, #pricing-table .signup:focus {
-	background: #62bc30;
-	top: 2px;
-	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
-	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
-	box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
-}
-
-/* --------------- */
-
-.clear:before, .clear:after {
-  content:"";
-  display:table
-}
-
-.clear:after {
-  clear:both
-}
-
-.clear {
-  zoom:1
 }
 
 
