--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ p {
 .header {
   display: none;
   opacity: .9;
-  position:fixed;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 8vh;
@@ -28,6 +28,10 @@ p {
   font-family: Calibri light;
   border-bottom: 2px solid #3F5866;
   z-index: 2;
+  animation: fadein .6s ease-in;
+  -webkit-animation: fadein .6s ease-in;
+  -moz-animation: fadein .6s ease-in;
+  -o-animation: fadein .6s ease-in;
 }
 .float {
   float: right;
@@ -67,7 +71,6 @@ p {
     border: 2px solid black;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.9);
 }
-
 .calulator-table {
   display: inline-block;
   background-color: #D8D0C5;
@@ -76,7 +79,6 @@ p {
   padding: 50px;
   height: 100vh;
 }
-
 .bmr {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
@@ -89,18 +91,7 @@ p {
   left: 0vw;
   margin: 0;
   text-align: center;
-  animation: fadein .4s ease-in;
-}
-@keyframes fadein {
-  0%{
-    opacity: 0;
-  }
-  50%{
-    opacity: .5;
-  }
-  100%{
-    opacity: 1;
-  }
+  animation: fadein .5s ease-in;
 }
 .bmr-content {
   position: relative;
@@ -113,18 +104,7 @@ p {
   border-radius: 10px;
   background-color: white;
   overflow: hidden;
-  animation: slide-left .4s ease-in;
-}
-@keyframes slide-left {
-  0%{
-    left: 100vw;
-  }
-  50%{
-    left: 20vw;
-  }
-  100%{
-    left:25vw;
-  }
+  animation: slide-down .4s ease-in;
 }
 #closeButton {
   width: 7vw;
@@ -285,6 +265,42 @@ td {
   border-right: 1px solid #C1C3D1;
 }
 
+/*
+|-----------------
+| Animations
+|-----------------
+*/
+
+@keyframes fadein {
+  0%{
+    opacity: 0;
+  }
+  50%{
+    opacity: .5;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+@keyframes slide-down {
+  0%{
+    top: 0vh;
+  }
+  50%{
+    top: 18vh;
+  }
+  100%{
+    top: 15vh;
+  }
+}
+@keyframes text-fade {
+  from{
+
+  }
+  to {
+
+  }
+}
 
 
 
